--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,8 +24,18 @@ body {
 header {
   width: 100%;
   border: 1px solid black;
-  display: flex;
-  justify-content: space-between; }
+  padding-bottom: 3em; }
+  header nav {
+    display: flex;
+    justify-content: space-between; }
+    header nav .nav-menu {
+      width: 400px;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      list-style: none; }
+      header nav .nav-menu a {
+        text-decoration: none; }
 
 main {
   border: 1px solid black; }
