--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -17,15 +17,17 @@ body{
    border: 1px solid red;
    width: 100vw;
    height: 100vh;
-   padding: 5em;
+   padding: 10vh 10vw;
    font-size: 15px;
    color: var(--color-secundario);
    font-family: 'Inter', sans-serif;
 }
 header{
-   width: 100%;
+   width: 80vw;
    border: 1px solid black;
-   padding-bottom: 3em;
+   // padding-bottom: 3em;
+
+   height: 15vh;
    nav{
       display: flex;
       justify-content: space-between;
@@ -43,23 +45,42 @@ header{
    }
 }
 main{
+   height: 65vh;
    border: 1px solid black;
+   width: 80vw;
    .upper-section{
       width: 100%;
       display: flex;
+      height: 80%;
       .principal{
          border: 1px solid black;
          width: 70%;
-         padding-right:3em;
+         padding-right:2em;
          img{
             width: 100%;
+            height: 75%;
          }
+         div{
+            padding: 1em 0em;
+            display: flex;
+            h1{
+               font-size: 1.2rem ;
+               width: 50%;
+            }
+            .parag{
+               font-size: .5rem;
+               width: 50%;
+               display: flex;
+               flex-direction: column;
+            }
+         }
+         
       }
       .aside{
          border: 1px solid black;
          width: 30%;
          background: var(--color-principal);
-         padding: 2em;
+         // padding: 2em;
          h2{
             font-size: 3em;
             height: 16%;
@@ -75,6 +96,19 @@ main{
             p{
 
             }
+         }
+      }
+   }
+   .lower-section{
+      height: 20%;
+      background: goldenrod;
+      .lower-list{
+         display: flex;
+         div{
+            display: flex;
+         }
+         img{
+            height: 10em;
          }
       }
    }
