--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -17,7 +17,7 @@ body{
    border: 1px solid red;
    width: 100vw;
    height: 100vh;
-   padding: 10vh 10vw;
+   padding: 3vh 10vw;
    font-size: 15px;
    color: var(--color-secundario);
    font-family: 'Inter', sans-serif;
@@ -27,7 +27,7 @@ header{
    border: 1px solid black;
    // padding-bottom: 3em;
 
-   height: 15vh;
+   height: 11vh;
    nav{
       display: flex;
       justify-content: space-between;
@@ -45,30 +45,34 @@ header{
    }
 }
 main{
-   height: 65vh;
+   height: 80vh;
    border: 1px solid black;
    width: 80vw;
    .upper-section{
       width: 100%;
       display: flex;
-      height: 80%;
+      height: 75%;
       .principal{
          border: 1px solid black;
          width: 70%;
          padding-right:2em;
          img{
             width: 100%;
-            height: 75%;
+            height: 70%;
          }
          div{
             padding: 1em 0em;
             display: flex;
+            height: fit-content;
             h1{
-               font-size: 1.2rem ;
+               font-size: 2.8rem;
                width: 50%;
+               padding-right: 5rem;
+               color: var(--color-principal);
+               line-height: 45px;
             }
             .parag{
-               font-size: .5rem;
+               font-size: .8rem;
                width: 50%;
                display: flex;
                flex-direction: column;
@@ -100,7 +104,7 @@ main{
       }
    }
    .lower-section{
-      height: 20%;
+      height: 25%;
       background: goldenrod;
       .lower-list{
          display: flex;
