--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -14,19 +14,15 @@
    box-sizing: border-box;
 }
 body{
-   border: 1px solid red;
    width: 100vw;
    height: 100vh;
-   padding: 3vh 10vw;
+   padding: 3vh 15vw;
    font-size: 15px;
    color: var(--color-secundario);
    font-family: 'Inter', sans-serif;
 }
 header{
-   width: 80vw;
-   border: 1px solid black;
-   // padding-bottom: 3em;
-
+   width: 70vw;
    height: 11vh;
    nav{
       display: flex;
@@ -39,6 +35,7 @@ header{
          list-style: none;
          a{
             text-decoration: none;
+            color: var(--color-secundario);
          }
          
       }
@@ -46,24 +43,22 @@ header{
 }
 main{
    height: 80vh;
-   border: 1px solid black;
-   width: 80vw;
+   width: 70vw;
    .upper-section{
       width: 100%;
       display: flex;
       height: 75%;
       .principal{
-         border: 1px solid black;
-         width: 70%;
-         padding-right:2em;
+         width: 67%;
+         padding-right:1.5em;
          img{
             width: 100%;
-            height: 70%;
+            height: 60%;
          }
          div{
             padding: 1em 0em;
             display: flex;
-            height: fit-content;
+            height: 40%;
             h1{
                font-size: 2.8rem;
                width: 50%;
@@ -76,15 +71,33 @@ main{
                width: 50%;
                display: flex;
                flex-direction: column;
+               align-items: baseline;
+               justify-content: space-between;
+               padding: 0;
+               font-size: 14px;
+               p{
+                  padding-bottom: 1.5em;
+               }
+               button{
+                  width: 12em;
+                  padding: .75em 0em;
+                  background-color: var(--bg-secundario);
+                  font-weight: bold;
+                  color: white;
+                  font-size: 14px;
+                  letter-spacing: 5px;
+                  border: none;
+                  cursor: pointer;
+                  text-transform: uppercase;
+               }
             }
          }
          
       }
       .aside{
-         border: 1px solid black;
-         width: 30%;
+         width: 33%;
          background: var(--color-principal);
-         // padding: 2em;
+         padding: 1.5em;
          h2{
             font-size: 3em;
             height: 16%;
@@ -92,28 +105,82 @@ main{
             margin-bottom: .2em;
          }
          div{
-            border: 1px solid white;
-            height: 28%;
+            border-bottom:1px solid var(--color-secundario);
+            padding: 1.1em 0em;
             h3{
                color: var(--Neutral);
+               font-size: 16px;
+               padding-bottom: .5em;
             }
             p{
-
+               font-size: 13px;
+            }
+            &:last-child{
+               border-bottom: none;
             }
          }
       }
    }
    .lower-section{
-      height: 25%;
-      background: goldenrod;
+      height: 20%;
+      margin-top: 2.5%;
+      background: white;
       .lower-list{
          display: flex;
+         justify-content: space-between;
          div{
             display: flex;
+            width: 33%;
+            img{
+               height: 6.7em;
+            }
+            .content{
+               display: flex;
+               flex-direction: column;
+               width: auto;
+               padding-left: 1em;
+               h3{
+                  font-size: 24px;
+               }
+               h4{
+                  color: var(--color-principal);
+               }
+            }
          }
-         img{
-            height: 10em;
+         
+      }
+   }
+}
+
+@media (max-width: 375px){
+   body{
+      margin: 1em;
+      padding: 0;
+      header{
+         margin-bottom: 1em;
+         .nav-menu{
+            display: none;
+         }
+      }
+      main{
+         width: 100vw;
+         .upper-section{
+            flex-direction: column;
+            width: 100%;
+            .principal{
+               display: flex;
+               flex-direction: column;
+               width: 100%;
+               img{
+                  width: 100%;
+               }
+            }
+         }
+         .lower-section{
+            display: flex;
+            flex-direction: column;
          }
       }
    }
+   
 }
